# pjm-load-forecast

./: .gitignore  Makefile  README.md  pyproject.toml
data/: sample.csv
docs/: build_data.py  data.json  index.html
docs/superpowers/plans/: 2026-04-28-pjm-load-forecast.md
docs/superpowers/specs/: 2026-04-28-pjm-load-forecast-design.md
notebooks/: demo.ipynb
pjm_load_forecast/: __init__.py  cli.py  data.py  evaluation.py  features.py  models.py
scripts/: download_sample.py
tests/: conftest.py  test_cli.py  test_data.py  test_evaluation.py  test_features.py  test_forecast.py  test_models.py
